<resources>
    <string name="app_name">Pelem Zaman Now</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Adam Mukharil Bachtiar</string>
    <string name="nav_header_subtitle">adam@email.unikom.ac.id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="search_movie">Search Movie</string>
    <string name="app_language">App Language</string>
    <string name="about_app">About App</string>
    <string name="configuration">Configuration</string>
    <string name="language">en-us</string>
    <string name="empty_text">No Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie_picture">Movie Picture</string>
    <string name="movie_title">Movie Title</string>
    <string name="film_description">Film Description</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="movie_title_detail">Movie Title Detail</string>
    <string name="rate_average">Rate Average</string>
    <string name="colon">:</string>
    <string name="vote_count">Vote Count</string>
    <string name="release_date">Release Date</string>
    <string name="description">Description</string>
    <string name="copyright_by_tmdb">Copyright by TMDB</string>
    <string name="search_by_title">Search by Title</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="now_playing_movie">Now Playing Movie</string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="favourite">Favourite</string>
    <string name="favorite">Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="pelem_favorite">Pelem Favorite</string>
    <string name="content_text">Pelem Zaman Now Missing You</string>
</resources>
