<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_play_circle_filled_black_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_fast_forward_black_24dp"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_search_film"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_movie" />
        <item
            android:id="@+id/nav_favorite_film"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite" />
    </group>

    <item android:title="@string/configuration">
        <menu>
            <item
                android:id="@+id/nav_app_language"
                android:icon="@drawable/ic_language_black_24dp"
                android:title="@string/app_language" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about_app" />
        </menu>
    </item>

</menu>
