<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_poster_film"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/movie_picture"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_poster_film"
            android:layout_toRightOf="@id/img_poster_film"
            android:text="@string/movie_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_title"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/img_poster_film"
            android:layout_toRightOf="@id/img_poster_film"
            android:text="@string/film_description" />

        <TextView
            android:id="@+id/tv_movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_release_date"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/img_poster_film"
            android:layout_toRightOf="@id/img_poster_film"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/release_date" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/img_poster_film"
            android:layout_toRightOf="@id/img_poster_film"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_background_red"
                android:text="@string/detail"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_background_red"
                android:text="@string/share"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>